--- a/fabricjs2Dshooter/practice.html
+++ b/fabricjs2Dshooter/practice.html
@@ -31,9 +31,6 @@
         <button id="startButton">Start</button>
         <button id="stopButton" disabled>Stop</button>
     </div>
-    <audio id="shootSound" src="https://www.soundjay.com/button/beep-07.wav"></audio>
-    <audio id="collisionSound" src="https://www.soundjay.com/button/beep-10.wav"></audio>
-    <audio id="backgroundMusic" src="https://www.soundjay.com/free-music/sounds/loop-1.mp3" loop></audio>
     <script>
         const canvas = new fabric.Canvas('gameCanvas');
 
@@ -44,12 +41,16 @@
             canvas.setBackgroundImage(img, canvas.renderAll.bind(canvas));
         });
 
-        // Game elements
+        const shootSound = new Audio('bow-release-bow-and-arrow-4-101936.mp3');
+        const hitSound = new Audio('arrow-impact-87260.mp3');
+        const backgroundMusic = new Audio('https://example.com/background-music.mp3'); 
+
+        backgroundMusic.loop = true;
+        backgroundMusic.volume = 0.5;
+
         let shooter;
         const bullets = [];
         const enemies = [];
-
-        // Game state
         let score = 0;
         let lives = 3;
         let gameRunning = false;
