--- a/fabricjs2Dshooter/game.html
+++ b/fabricjs2Dshooter/game.html
@@ -33,7 +33,7 @@
     </div>
     <audio id="shootSound" src="bow-release-bow-and-arrow-4-101936.mp3"></audio>
     <audio id="collisionSound" src="arrow-impact-87260.mp3"></audio>
-    <audio id="backgroundMusic" src="https://www.soundjay.com/free-music/sounds/loop-1.mp3" loop></audio>
+    <audio id="backgroundMusic" src="welcome-to-the-jungle-228477.mp3" loop></audio>
     <script>
         const canvas = new fabric.Canvas('gameCanvas');
 
